# AEGIS-OS

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
bootchain/keygen/: Cargo.toml
bootchain/keygen/src/: main.rs
compiler-realm/: Cargo.toml
compiler-realm/src/: lib.rs
github/workflows/: build.yml
hardware/pixel9-tensor-g4/: defconfig
hardware/qrb5165-rb6/: defconfig
kernel/: Cargo.toml  linker.ld
kernel/src/: entry.S  lib.rs  realm.rs  supervisor.rs
scripts/: build_all.sh  flash_rb6.sh
userspace/: Cargo.toml
userspace/init/: Cargo.toml
userspace/shell/: Cargo.toml
userspace/shell/init/src/: main.rs
userspace/shell/src/: main.rs
